# woflang

./: CMakeLists.txt  README  build_woflang.sh  chess_plugin.md  comp_test.sh  main.cpp  woflang-config.cmake.in  woflang.rc  woflang.sh  woflang_simd_complete.cpp  woflang_simd_complete_norm.cpp
core/: woflang_compat.hpp
docs/: build_instrucetions.md  claude_convo.txt  claude_got_close_but_messed_it.md  claude_real_analog_time.md  claudes_lil_end_summary.md  fixes_&_improvements_+_how_to.md  how_to_module.md  implementation_sumary_&_next_steps.md  overall_summary.md  overview_&_guide.md  petey_summary.md  structure_analysis.md  structure_plan.md  woflang5_plan.md  woflang_project_summary.md  working_implementation_plan.md
docs/new_docs/: README  attributions.md  claude_convo_anjalog_woflang.md  dev_modules.md  easter_eggs.md  history.md  licensing.md
examples/: center_diagonal.wof
new_docs/: cantor_proof.md  manual.md  neural_cheese.md  todo.md
new_stuff/: modellica_to_woflang_transpiler.cpp  roadmap_for_looting_modellica.cpp
new_stuff/analog_mode/: 0roposed_werner_foundation_alt.md  analog_runtime_integration.cpp  circuit_primitive_concept.cpp  usage examples.md  usage_examples_simd.md
new_stuff/analog_mode/runtime/: analgo_state.hpp  analog_angles.hpp  analog_distance.hpp  analog_geometries.hpp  analog_interface.hpp  analog_linear.hpp  analog_math.hpp  analog_math_extended.hpp  analog_matrix.hpp  analog_matrix_4x4.hpp  analog_matrix_chain.hpp  analog_modes.hpp  analog_projection.hpp  analog_transfroms.hpp  analog_transofrm_2d.hpp  analog_vector_ops.hpp  analog_wrap.hpp  analog_wrap_extended.hpp  angle_polar_cartesian.hpp  command_loop.cpp
new_stuff/analog_mode/simd/: analog_angle_simd.hpp  analog_apply_batch_2d_simd.hpp  analog_apply_batch_simd.hpp  analog_dot_sized.hpp  analog_normalize_simd.hpp  analog_projection_simd.hpp  analog_vector_simd.hpp  matrix_batch_simd.hpp
new_stuff/simd/: parse_wflang_simd.hpp  simd_selector.hpp  simd_utf32_avx2.hpp
new_stuff/symbolic_logic/: symbolic_logic_ops.cpp  symbolic_logic_plugin.md  symbolic_ops_logic.old  woflang_logic_extensons.hpp
plugins/: CMakeLists.txt  chess_ops.cpp  crypto_div-trial.cpp  crypto_ops.cpp  diff_op.cpp  io_debug_ops.cpp  kanji_ops.cpp  math_ops.cpp  neural_chess_brain.cpp  neural_chess_brain.old  prime_heck_op.cpp  prime_ops.cpp  quantum_ops.cpp  simple_chess_ops.cpp  simple_chess_ops.cpp.txt  stack_slayer_op.cpp  symbolic_calc_ops.cpp  symbolic_engine.hpp  symbolic_logic_ops.cpp  trig_ops.cpp  void_division_op.cpp
src/core/: woflang.cpp  woflang.hpp
src/io/: tokenizer.cpp  tokenizer.hpp
src/repl/: repl_main.cpp
tests/: basic_arithmetic.wof  basic_trest.wof  benchmarking.cpp  main._enhanced.cpp  main_basic.cpp  main_comprehensive.cpp  new_plugins_test.wof  quantum_ops.wof  run_tests.ps1  run_tests.sh  showcase.wof  simple_benchmarking.cpp  stack_operations.wof  test_crypto.wofl  test_diff_numeric.cpp  test_fractal.cpp  test_fractal.wofl  test_geom.wofl  test_modexp.cpp  test_pow_root_gamma_factorial.cpp  test_programs.md  test_trig.wofl  testtrig_exp_log.cpp  unicode_support.wof  woflang_test_runner.cpp  woflang_test_runner.old
tools/: bridge_init_and__build.sh  bridge_init_and_build.sh  disable_chess_and_rebuild.sh  fix_and_build.sh  fix_plugins_and_rebuild.sh
